[package]
name = "flashcard-quiz"
version = "0.1.0"
edition = "2021"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16"
